--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -62,3 +62,7 @@ input:focus + .slider {
 input:checked + .slider:before {
     transform: translateX(1.1em);
 }
+
+section {
+    padding-top: 50px;
+}
